--- a/styles.css
+++ b/styles.css
@@ -26,7 +26,8 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'SF Pro', -apple-system, BlinkMacSystemFont, sans-serif;
+    font-weight: 500;
+    font-family: -apple-system, 'SF Pro', BlinkMacSystemFont, sans-serif;
     /* Використовуємо SF Pro */
 }
 body {
@@ -96,7 +97,7 @@ header {
 }
 
 header h1 {
-    font-size: 24px;
+    font-size: 20px;
     font-weight: 700;
 }
 
@@ -223,4 +224,8 @@ header h1 {
 
 .numbers button{
     padding: 10px 30px;
+}
+
+.balance h2, .num{
+    font-weight: 300;font-size: 42px;
 }
